--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,4 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
     <item android:id="@+id/about" android:title="@string/about"
         android:orderInCategory="100" app:showAsAction="never" />
+    <item
+        android:id="@+id/badge"
+        android:title="Badges"
+        android:actionLayout="@layout/notificationlayout"
+        app:showAsAction="always" />
 </menu>
