--- a/app/src/main/res/layout/activity_server_notifications.xml
+++ b/app/src/main/res/layout/activity_server_notifications.xml
@@ -5,9 +5,17 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/background">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="10dp">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listViewServerNotification" />
+        android:id="@+id/listViewServerNotification"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
+        android:background="@android:color/transparent"/>
+    </LinearLayout>
 </LinearLayout>
