--- a/app/src/main/res/layout/notificationlv.xml
+++ b/app/src/main/res/layout/notificationlv.xml
@@ -7,45 +7,45 @@
         android:weightSum="1"
         android:background="#ffebeff1"
         android:id="@+id/lvLinearLayout"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         >
 
         <!-- add views here that you want to show at the top !-->
+
+
+
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:background="#000000">
-
+        android:background="@android:color/holo_purple"
+        android:orientation="vertical">
         <ImageView
             android:id="@+id/lvImage"
             android:layout_width="60dip"
             android:layout_height="60dip"
-            android:src="@drawable/airplane"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="3">
-
+            android:src="@drawable/airplane"
+            android:layout_gravity="left"/>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="BLR->DEL"
             android:id="@+id/lvHeading"
-            android:textSize="10sp"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
             android:layout_marginLeft="5dp" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="15th-Mar-2016"
             android:id="@+id/lvContent"
             android:typeface="sans"
-            android:textSize="8sp"
-            android:textColor="#4c22ff"
-            android:textAppearance="@android:color/holo_blue_light" />
+            android:textSize="14sp"
+            android:textColor="@android:color/white"
+            android:textAppearance="@android:color/holo_blue_light"
+            android:layout_gravity="right|bottom"/>
         </LinearLayout>
 
 
