--- a/app/src/main/res/layout/activity_activity_accepted.xml
+++ b/app/src/main/res/layout/activity_activity_accepted.xml
@@ -1,7 +1,13 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ScrollView01"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true"
+    android:scrollbars="none" >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@android:color/black"
     tools:context="peerdelivers.peerdelivery.Result">
 
 
@@ -28,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="Text Mark"
             android:textColor="@android:color/white"
-            android:background="@android:color/black"
+            android:background="@android:color/holo_blue_dark"
             android:layout_weight="1"
             android:id="@+id/bt_text" />
     </LinearLayout>
@@ -38,6 +44,7 @@
         android:layout_height="100dp"
         android:id="@+id/iv_profilepic"
         android:src="@drawable/team"
+        android:layout_margin="5dp"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -48,6 +55,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Devanshu Litoria"
         android:id="@+id/textView2"
+        android:textColor="@android:color/white"
         android:layout_below="@+id/linearLayout"
         android:layout_toRightOf="@+id/iv_profilepic"
         android:layout_toEndOf="@+id/iv_profilepic" />
@@ -58,6 +66,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Oracle Financial Services"
         android:id="@+id/textView3"
+        android:textColor="@android:color/white"
         android:layout_below="@+id/textView2"
         android:layout_toRightOf="@+id/iv_profilepic"
         android:layout_toEndOf="@+id/iv_profilepic" />
@@ -68,6 +77,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Acceptance Probablity : 0.25"
         android:id="@+id/textView4"
+        android:textColor="@android:color/white"
         android:layout_below="@+id/textView3"
         android:layout_toRightOf="@+id/iv_profilepic"
         android:layout_toEndOf="@+id/iv_profilepic" />
@@ -77,6 +87,7 @@
         android:layout_height="wrap_content"
         android:text="Bangalore to Delhi"
         android:id="@+id/textView5"
+        android:textColor="@android:color/white"
         android:textSize="30sp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/iv_profilepic"/>
@@ -86,6 +97,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="on"
+        android:textColor="@android:color/white"
         android:id="@+id/textView6"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView5"
@@ -96,6 +108,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="15th-June-2016"
+        android:textColor="@android:color/white"
         android:id="@+id/tv_doj"
         android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true"
@@ -115,6 +128,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="PNR:AJQPL78"
+        android:textColor="@android:color/white"
         android:id="@+id/pnr"
         android:layout_below="@+id/iv_type"
         android:layout_centerHorizontal="true" />
@@ -126,6 +140,7 @@
         android:text="Congrats Devanshu has accepted to carry your item!"
         android:id="@+id/tv_displayMessage"
         android:textSize="30sp"
+        android:textColor="@android:color/white"
         android:layout_below="@+id/pnr"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="49dp"
@@ -133,3 +148,4 @@
 
 
 </RelativeLayout>
+</ScrollView>
