added search capability without upload data to the request_tbl

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/backgroud2"
     tools:context="peerdelivers.peerdelivery.Result">
 
 
@@ -40,11 +40,13 @@
         android:src="@drawable/team"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_margin="9dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Devanshu Litoria"
         android:id="@+id/textView2"
@@ -55,6 +57,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Oracle Financial Services"
         android:id="@+id/textView3"
@@ -65,6 +68,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Acceptance Probablity : 0.25"
         android:id="@+id/textView4"
@@ -76,6 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bangalore to Delhi"
+        android:textColor="@android:color/white"
         android:id="@+id/textView5"
         android:textSize="30sp"
         android:layout_centerHorizontal="true"
@@ -86,6 +91,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="on"
+        android:textColor="@android:color/white"
         android:id="@+id/textView6"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textView5"
@@ -94,6 +100,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="15th-June-2016"
         android:id="@+id/tv_doj"
@@ -105,6 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/iv_type"
+        android:textColor="@android:color/white"
         android:layout_centerHorizontal="true"
         android:src="@drawable/train"
         android:layout_below="@+id/tv_doj"
@@ -114,11 +122,14 @@
         android:layout_width="fill_parent"
         android:layout_height="100dp"
         android:id="@+id/request_box"
+        android:textColorHint="@android:color/white"
+        android:textColor="@android:color/white"
         android:layout_below="@+id/iv_type"
         android:layout_centerHorizontal="true"
-        android:hint="Enter a request message. Remember this is the only meesage that would be visible to this user!"
+        android:hint="Enter a request message. Remember this is the only message that would be visible to this user!"
         android:padding="5dp"
-        android:maxLines="5" />
+        android:maxLength="200"
+         />
 
 
 
